@@ -1,21 +1,5 @@
 package com.ak.numbers;
 
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.EnumSet;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.function.IntBinaryOperator;
-import java.util.function.IntFunction;
-import java.util.function.IntUnaryOperator;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import javax.annotation.Nonnegative;
-import javax.annotation.Nonnull;
-
 import com.ak.util.Strings;
 import org.apache.commons.math3.analysis.BivariateFunction;
 import org.apache.commons.math3.analysis.UnivariateFunction;
@@ -24,21 +8,26 @@ import org.apache.commons.math3.analysis.interpolation.LinearInterpolator;
 import org.apache.commons.math3.analysis.interpolation.PiecewiseBicubicSplineInterpolator;
 import org.apache.commons.math3.analysis.interpolation.UnivariateInterpolator;
 
+import javax.annotation.Nonnegative;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
 public enum Interpolators {
   AKIMA(new AkimaSplineInterpolator(), 5), LINEAR(new LinearInterpolator(), 2);
 
   private static final int SPLINE_POINTS = 100;
-  @Nonnull
   private final UnivariateInterpolator interpolator;
   @Nonnegative
   private final int minPoints;
 
-  Interpolators(@Nonnull UnivariateInterpolator interpolator, @Nonnegative int minPoints) {
-    this.interpolator = interpolator;
+  Interpolators(UnivariateInterpolator interpolator, @Nonnegative int minPoints) {
+    this.interpolator = Objects.requireNonNull(interpolator);
     this.minPoints = minPoints;
   }
 
-  public static <C extends Enum<C> & Coefficients> Supplier<IntBinaryOperator> interpolator(@Nonnull Class<C> coeffEnum) {
+  public static <C extends Enum<C> & Coefficients> Supplier<IntBinaryOperator> interpolator(Class<C> coeffEnum) {
     Map<C, IntUnaryOperator> coeffSplineMap = EnumSet.allOf(coeffEnum).stream().collect(
         Collectors.toMap(Function.identity(), coefficients -> interpolator(coefficients).get())
     );
@@ -77,27 +66,28 @@ public enum Interpolators {
 
       @Override
       public int applyAsInt(int x, int y) {
-        return (int) Math.round(f.value(Math.min(Math.max(x, 0), xs[xs.length - 1]), Math.min(Math.max(y, 0), ys[ys.length - 1])));
+        return (int) Math.round(f.value(Math.clamp(x, 0, xs[xs.length - 1]), Math.clamp(y, 0, ys[ys.length - 1])));
       }
     };
   }
 
-  public static Supplier<IntUnaryOperator> interpolator(@Nonnull Coefficients coefficients) {
+  public static Supplier<IntUnaryOperator> interpolator(Coefficients coefficients) {
     double[][] pairs = coefficients.getPairs();
     return EnumSet.allOf(Interpolators.class).stream().filter(i -> pairs.length >= i.minPoints).findFirst().
         orElseThrow(() -> new IllegalArgumentException("Number of points %d from %s is too small".formatted(pairs.length, coefficients))).
         interpolate(pairs);
   }
 
-  private static Supplier<IntUnaryOperator> interpolator(@Nonnull double[] abscissValues, @Nonnull double[] ordinateValues) {
+  private static Supplier<IntUnaryOperator> interpolator(double[] abscissValues, double[] ordinateValues) {
     int length = Math.min(abscissValues.length, ordinateValues.length);
     return EnumSet.allOf(Interpolators.class).stream().filter(i -> length >= i.minPoints).findFirst().
         orElseThrow(() -> new IllegalArgumentException("Number of points %d is too small".formatted(length))).
         interpolate(abscissValues, ordinateValues);
   }
 
-  private Supplier<IntUnaryOperator> interpolate(@Nonnull double[][] coefficients) {
-    double[][] sorted = Arrays.stream(coefficients).sorted(Comparator.comparingDouble(o -> o[0])).toArray(value -> new double[value][0]);
+  private Supplier<IntUnaryOperator> interpolate(double[][] coefficients) {
+    double[][] sorted = Arrays.stream(Objects.requireNonNull(coefficients)).sorted(Comparator.comparingDouble(o -> o[0]))
+        .toArray(value -> new double[value][0]);
     var xValues = new double[sorted.length];
     var yValues = new double[sorted.length];
 
@@ -109,13 +99,13 @@ public enum Interpolators {
     return interpolate(xValues, yValues);
   }
 
-  private Supplier<IntUnaryOperator> interpolate(@Nonnull double[] xValues, @Nonnull double[] yValues) {
+  private Supplier<IntUnaryOperator> interpolate(double[] xValues, double[] yValues) {
     return () -> new IntUnaryOperator() {
       private final UnivariateFunction f = interpolator.interpolate(xValues, yValues);
 
       @Override
       public int applyAsInt(int x) {
-        return (int) Math.round(f.value(Math.min(Math.max(x, xValues[0]), xValues[xValues.length - 1])));
+        return (int) Math.round(f.value(Math.clamp(x, xValues[0], xValues[xValues.length - 1])));
       }
     };
   }
